yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickapp
spec:
  selector:
    matchLabels:
      app: rickapp
  replicas: 4
  template:
    metadata:
      labels:
        app: rickapp
    spec:
      containers:
      - name: rickapp
        image: rickapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
