yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickapp-service
spec:
  selector:
    app: rickapp
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 3000
  type: LoadBalancer
