yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rickapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rickandmortyapp.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rickapp-service
            port:
              number: 6000
